[package]
name = "quoll"
version = "0.1.0"
authors = ["Daniele Tricoli <eriol@mornie.org>"]
description = "Display custom icons on system tray"
homepage = "https://github.com/eriol/quoll"
repository = "https://github.com/eriol/quoll"
readme="README.md"
license="GPL-3.0+"
edition = "2018"

[dependencies]
clap = "2.33.0"
glib = "0.5.0"
gtk = "0.4.1"
gtk-sys = "0.6.0"
home = "0.3.4"
libappindicator = "0.4.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
