[package]
name = "quoll"
version = "0.1.2"
authors = ["Daniele Tricoli <eriol@mornie.org>"]
description = "Display custom icons on system tray"
homepage = "https://github.com/eriol/quoll"
repository = "https://github.com/eriol/quoll"
readme="README.md"
license="GPL-3.0+"
edition = "2018"

[dependencies]
clap = "2.33.0"
gtk = "0.14.3"
home = "0.5.3"
libayatana-appindicator = "0.1.6"
log = "0.4.8"
pretty_env_logger = "0.4.0"
